assets/css/style.css
:root {
    --bodybgc: #e9e9e9;
    --clickable: #155799;
    --clickablehover: #739ac2;
    --searchbox: #0d345c;
    --weatherbox: #454545;
    --forecastbox: #747474;
}

body {
    background-color: var(--bodybgc);
}

.custom-hnf {
    background: linear-gradient(to right, #1e3c72, #2a5298); 
    color: white
}

.custom-search {
    background-color: var(--searchbox);
}


.custom-weather {
    background-color: var(--weatherbox);
}

.custom-forecast {
    background-color: var(--forecastbox);
}

.custom-divider {
    border-top: 1px solid gray;
    border-radius: 5px;
}

.custom-li {
    border-radius: 5px;
    padding: 3px;
    margin-bottom: 1rem;
    border: 1px solid black;
    color: white;
    list-style: none;
    cursor: pointer;
    background-color: var(--clickable)
}

.custom-li:hover {
    background-color: var(--clickablehover);
}

.custom-btn {
    background-color: var(--clickable);
    color: white;
    border-color: black;
}

.custom-btn:hover {
    background-color: var(--clickablehover);
    color: white;
    border-color: black;
}

